Работа с Undo/Redo

--- a/app/src/main/res/layout/fragment_roll.xml
+++ b/app/src/main/res/layout/fragment_roll.xml
@@ -13,7 +13,10 @@
 
         <variable name="enterNotEmpty" type="boolean"/>
 
+        <variable name="undoAccess" type="boolean"/>
+        <variable name="redoAccess" type="boolean"/>
         <variable name="rankEmpty" type="boolean"/>
+
         <variable name="noteClick"
                   type="sgtmelon.scriptum.office.intf.MenuIntf.Note.NoteMenuClick"/>
         <variable name="deleteClick"
