--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -10,7 +10,10 @@
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
         <variable name="keyEdit" type="boolean"/>
 
+        <variable name="undoAccess" type="boolean"/>
+        <variable name="redoAccess" type="boolean"/>
         <variable name="rankEmpty" type="boolean"/>
+
         <variable name="noteClick"
                   type="sgtmelon.scriptum.office.intf.MenuIntf.Note.NoteMenuClick"/>
         <variable name="deleteClick"
