--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -84,7 +84,9 @@
                  app:keyEdit='@{keyEdit}'
                  app:noteClick='@{noteClick}'
                  app:noteItem='@{noteItem}'
-                 app:rankEmpty='@{rankEmpty}'/>
+                 app:rankEmpty='@{rankEmpty}'
+                 app:redoAccess='@{redoAccess}'
+                 app:undoAccess='@{undoAccess}'/>
 
     </LinearLayout>
 
