--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -77,7 +77,7 @@
 
                 <ImageButton
                         style="@style/Enter.Button"
-                        android:onClick='@{() -> noteClick.onUndoClick()}'
+                        android:onClick='@{() -> noteClick.onInputClick(true)}'
                         android:contentDescription="@null"
                         app:boolExpression='@{undoAccess}'
                         app:enabled='@{undoAccess}'
@@ -88,7 +88,7 @@
 
                 <ImageButton
                         style="@style/Enter.Button"
-                        android:onClick='@{() -> noteClick.onRedoClick()}'
+                        android:onClick='@{() -> noteClick.onInputClick(false)}'
                         android:contentDescription="@null"
                         app:boolExpression='@{redoAccess}'
                         app:enabled='@{redoAccess}'
