--- a/safedialog/src/main/res/drawable/ic_color.xml
+++ b/safedialog/src/main/res/drawable/ic_color.xml
@@ -2,7 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
 
-    <solid android:color="@color/note_purple_dark"/>
+    <solid android:color="#FFFFFF"/>
+    <stroke
+            android:width="1dp"
+            android:color="#000000"/>
     <size
             android:width="24dp"
             android:height="24dp"/>
