--- a/safedialog/src/main/res/layout/item_color.xml
+++ b/safedialog/src/main/res/layout/item_color.xml
@@ -12,6 +12,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
+            android:background="@drawable/ic_color"
             android:contentDescription="@null"/>
 
     <!-- TODO 13.10.18 Сделать область нажатия круглой, для pre API21 -->
