--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -7,7 +7,6 @@
 
         <import alias="v" type="android.view.View"/>
         <import alias="text" type="android.text.TextUtils"/>
-        <import type="sgtmelon.scriptum.office.utils.HelpUtils.Pref"/>
         <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
@@ -16,9 +15,9 @@
 
     <androidx.cardview.widget.CardView
             style="@style/Card"
-            app:noteColor='@{noteItem.color}'
             app:cardCornerRadius="@dimen/radius_4dp"
             app:cardUseCompatPadding="false"
+            app:noteColor='@{noteItem.color}'
             tools:cardBackgroundColor="@color/note_green_light">
 
         <FrameLayout
@@ -55,7 +54,7 @@
                         android:contentDescription="@null"
                         app:noteColor='@{noteItem.color}'
                         app:viewOnDark='@{true}'
-                        android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
+                        app:visibleOn='@{def.dark}'
                         tools:tint="@color/note_green_dark"
                         tools:visibility="gone"/>
 
