--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -31,7 +31,9 @@
 
             <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/layout_24dp"
+                    android:layout_marginEnd="@dimen/layout_24dp">
 
                 <EditText
                         android:id="@+id/name_enter"
