--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -13,6 +13,7 @@
         <variable name="undoAccess" type="boolean"/>
         <variable name="redoAccess" type="boolean"/>
         <variable name="rankEmpty" type="boolean"/>
+        <variable name="saveEnabled" type="boolean"/>
 
         <variable name="noteClick"
                   type="sgtmelon.scriptum.office.intf.MenuIntf.Note.NoteMenuClick"/>
@@ -85,6 +86,7 @@
                  app:noteClick='@{noteClick}'
                  app:noteItem='@{noteItem}'
                  app:rankEmpty='@{rankEmpty}'
+                 app:saveEnabled='@{saveEnabled}'
                  app:redoAccess='@{redoAccess}'
                  app:undoAccess='@{undoAccess}'/>
 
