Исправил цвет панели управления заметкой и поля ввода пункта для списка
#Вынес контейнер с вводом пункта для списка в include
#Добавил TODO с исправлениями

--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -35,7 +35,7 @@
         <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/clBackgroundView"
+                android:background="?attr/clPrimary"
                 android:paddingLeft="@dimen/layout_8dp"
                 android:paddingRight="@dimen/layout_8dp">
 
