--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -10,15 +10,16 @@
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
         <variable name="keyEdit" type="boolean"/>
 
-        <variable name="undoAccess" type="boolean"/>
-        <variable name="redoAccess" type="boolean"/>
-        <variable name="rankEmpty" type="boolean"/>
-        <variable name="saveEnabled" type="boolean"/>
-
         <variable name="noteClick"
                   type="sgtmelon.scriptum.office.intf.MenuIntf.Note.NoteMenuClick"/>
         <variable name="deleteClick"
                   type="sgtmelon.scriptum.office.intf.MenuIntf.Note.DeleteMenuClick"/>
+
+        <variable name="undoAccess" type="boolean"/>
+        <variable name="redoAccess" type="boolean"/>
+        <variable name="rankEmpty" type="boolean"/>
+        <variable name="rankSelect" type="boolean"/>
+        <variable name="saveEnabled" type="boolean"/>
 
     </data>
 
@@ -86,8 +87,9 @@
                  app:noteClick='@{noteClick}'
                  app:noteItem='@{noteItem}'
                  app:rankEmpty='@{rankEmpty}'
-                 app:saveEnabled='@{saveEnabled}'
+                 app:rankSelect='@{rankSelect}'
                  app:redoAccess='@{redoAccess}'
+                 app:saveEnabled='@{saveEnabled}'
                  app:undoAccess='@{undoAccess}'/>
 
     </LinearLayout>
