--- a/iconanim/src/main/res/drawable/ic_visible_exit_anim.xml
+++ b/iconanim/src/main/res/drawable/ic_visible_exit_anim.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:drawable="@drawable/ic_visible_off"
+    android:drawable="@drawable/ic_visible_exit"
     tools:ignore="NewApi">
 
     <target
         android:name="@string/anim_visible_strike_path"
-        android:animation="@animator/visible_strike_path_on" />
+        android:animation="@animator/visible_strike_path_exit" />
 
     <target
         android:name="@string/anim_visible_strike_mask"
-        android:animation="@animator/visible_strike_mask_on" />
+        android:animation="@animator/visible_strike_mask_exit" />
 
     <target
         android:name="@string/anim_visible_eye_path"
-        android:animation="@animator/visible_eye_path_on" />
+        android:animation="@animator/visible_eye_path_exit" />
 
 </animated-vector>
