--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -31,10 +31,10 @@
                     style="@style/RankItem.Button"
                     android:layout_marginEnd="@dimen/layout_8dp"
                     android:layout_marginRight="@dimen/layout_8dp"
-                    app:srcDisable="@drawable/ic_visible_off"
-                    app:srcDisableAnim="@drawable/ic_visible_off_anim"
-                    app:srcSelect="@drawable/ic_visible_on"
-                    app:srcSelectAnim="@drawable/ic_visible_on_anim"/>
+                    app:srcDisable="@drawable/ic_visible_enter"
+                    app:srcDisableAnim="@drawable/ic_visible_exit_anim"
+                    app:srcSelect="@drawable/ic_visible_exit"
+                    app:srcSelectAnim="@drawable/ic_visible_enter_anim"/>
 
             <LinearLayout
                     android:layout_width="0dp"
@@ -75,7 +75,7 @@
                     android:layout_marginLeft="@dimen/layout_8dp"
                     android:contentDescription="@null"
                     android:tint="?attr/clIcon"
-                    app:srcCompat="@drawable/ic_cancel_on"/>
+                    app:srcCompat="@drawable/ic_cancel_enter"/>
 
         </LinearLayout>
 
